[gd_scene load_steps=11 format=3 uid="uid://gyn6ov73kxd2"]

[ext_resource type="Script" path="res://Scripts/gamePlayLoop.gd" id="1_66qs4"]
[ext_resource type="Script" path="res://Scripts/playerStatusBar.gd" id="1_dkdrk"]
[ext_resource type="Texture2D" uid="uid://cw4pq165gdgdy" path="res://Assets/uh_53x53.png" id="1_mdiq6"]
[ext_resource type="Texture2D" uid="uid://dhmknv1hynwn8" path="res://Assets/playerStatusBar.png" id="2_dvin5"]
[ext_resource type="Texture2D" uid="uid://dv7u515vq3tdg" path="res://Assets/uh2_10x10.png" id="4_ssifm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_erkx4"]
bg_color = Color(0.94902, 0.407843, 0.286275, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bindy"]
bg_color = Color(0.843137, 0.407843, 0.796078, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uiajo"]
bg_color = Color(0.236897, 0.639265, 0.873232, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hra5d"]
bg_color = Color(0.223529, 0.466667, 0.588235, 1)
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wcwqj"]
bg_color = Color(0.34902, 0.639216, 0.784314, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8

[node name="Play" type="Node2D"]
script = ExtResource("1_66qs4")

[node name="Uh53x53" type="Sprite2D" parent="."]
position = Vector2(573.5, 329)
scale = Vector2(22.2075, 12.7925)
texture = ExtResource("1_mdiq6")

[node name="playerStatusBar" type="Sprite2D" parent="."]
position = Vector2(579, 331.5)
scale = Vector2(1.00868, 1.03241)
texture = ExtResource("2_dvin5")
script = ExtResource("1_dkdrk")

[node name="hpBar" type="ProgressBar" parent="playerStatusBar"]
offset_left = 360.0
offset_top = -83.0
offset_right = 572.0
offset_bottom = -56.0
theme_override_styles/fill = SubResource("StyleBoxFlat_erkx4")
value = 100.0
show_percentage = false

[node name="hpText" type="RichTextLabel" parent="playerStatusBar/hpBar"]
editor_description = "armour depletes before this increases"
layout_mode = 0
offset_right = 212.0
offset_bottom = 27.0
bbcode_enabled = true
text = "my bones are broken"

[node name="lustBar" type="ProgressBar" parent="playerStatusBar"]
offset_left = 360.0
offset_top = -50.0
offset_right = 572.0
offset_bottom = -23.0
theme_override_styles/fill = SubResource("StyleBoxFlat_bindy")
value = 100.0
show_percentage = false

[node name="lustText" type="RichTextLabel" parent="playerStatusBar/lustBar"]
editor_description = "ignores armour and pain, will increase when lust-based attacks are sent, as long as player isn't \"unfocused\" or blindfolded"
layout_mode = 0
offset_right = 212.0
offset_bottom = 27.0
bbcode_enabled = true
text = "boner zone"

[node name="armourBar" type="ProgressBar" parent="playerStatusBar"]
offset_left = 360.0
offset_top = -17.0
offset_right = 572.0
offset_bottom = 10.0
theme_override_styles/fill = SubResource("StyleBoxFlat_uiajo")
value = 100.0
show_percentage = false

[node name="armourText" type="RichTextLabel" parent="playerStatusBar/armourBar"]
editor_description = "this depletes before pain increases"
layout_mode = 0
offset_right = 212.0
offset_bottom = 27.0
bbcode_enabled = true
text = "Ãœbercharge"

[node name="cbaToMofiyThePNG" type="Sprite2D" parent="playerStatusBar"]
position = Vector2(315.443, -1.45239)
scale = Vector2(8.29193, 64.7031)
texture = ExtResource("4_ssifm")

[node name="topTitleBarAsICantBeBotheredToModifyThePNG" type="Sprite2D" parent="playerStatusBar"]
position = Vector2(467.25, -311)
scale = Vector2(22.35, 2.4)
texture = ExtResource("4_ssifm")

[node name="playerName" type="RichTextLabel" parent="playerStatusBar"]
offset_left = 355.0
offset_top = -320.0
offset_right = 577.0
offset_bottom = -280.0
theme_override_font_sizes/normal_font_size = 15
bbcode_enabled = true
text = "Player - Unidentified Species"

[node name="levelText" type="RichTextLabel" parent="playerStatusBar"]
editor_description = "this depletes before pain increases"
offset_left = 360.0
offset_top = 16.0
offset_right = 572.0
offset_bottom = 43.0
bbcode_enabled = true
text = "your level goes here, idk"

[node name="gameHolder" type="Node" parent="."]
editor_description = "can't come up with a good name, sorry!"

[node name="gameText" type="RichTextLabel" parent="gameHolder"]
offset_left = 220.0
offset_right = 841.0
offset_bottom = 540.0
bbcode_enabled = true
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vehicula metus blandit tellus aliquam commodo. Sed semper maximus cursus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nulla ultrices arcu nibh, eget egestas arcu posuere non. In condimentum orci a ipsum rutrum pulvinar. Ut diam lectus, imperdiet a auctor sed, suscipit vitae lorem. Suspendisse pulvinar libero in nulla sodales, in aliquet justo interdum. Vestibulum vulputate, erat sit amet gravida aliquam, nunc mi ultricies quam, in congue arcu turpis ut lectus. Integer augue eros, aliquam non mattis nec, congue in odio. Aenean quis purus vel orci hendrerit semper. Maecenas ullamcorper metus sed felis ultricies, ac bibendum augue suscipit.

Nunc ornare risus quis sem tempus feugiat. Ut neque felis, condimentum non elementum vel, rutrum ut justo. Sed posuere dictum venenatis. Integer sed congue nisi, luctus posuere ante. Nulla bibendum, erat id bibendum semper, magna nulla ultricies nunc, ac vestibulum sem metus non ante. Curabitur finibus, lorem id pretium dapibus, nulla diam volutpat ex, vitae efficitur nisi turpis in augue. Nullam felis leo, mattis at nisi non, rutrum elementum erat. Donec sem est, pharetra et volutpat id, accumsan vel sapien. Vivamus facilisis diam urna, lobortis efficitur augue iaculis eget. Vestibulum pharetra varius sapien sit amet hendrerit. Vivamus iaculis tortor non quam suscipit, vel molestie arcu tempus. Sed efficitur ligula ut ultrices auctor.

Suspendisse efficitur vitae metus a cursus. Duis porta leo vel aliquam pretium. Ut varius nibh eu congue malesuada. Nunc gravida vehicula eros, et sodales nisl malesuada et. Nullam at neque ut mauris vulputate cursus quis eget nulla. Proin ultrices scelerisque lacinia. Morbi at mi vulputate sem rutrum volutpat eget eget lectus. Ut faucibus ante neque, et viverra tortor volutpat id. Phasellus ultrices facilisis sem, nec egestas turpis egestas sit amet. Morbi euismod, ex at tincidunt sagittis, nisi elit venenatis ex, aliquet iaculis sem purus id risus. Mauris et tellus lacus.

Nunc et commodo dui. Donec dapibus et justo ac cursus. Phasellus in facilisis arcu, et suscipit ante. Suspendisse blandit, metus vitae posuere consectetur, neque nulla hendrerit nisl, vel laoreet nunc tortor id nibh. Curabitur mi ex, posuere eu neque id, rhoncus mattis lectus. Nulla facilisi. Proin id lorem urna. Donec facilisis ligula non metus luctus suscipit. Nulla ac est id lacus auctor congue. Phasellus varius eu leo ut tempor. Quisque eleifend, massa vitae porta accumsan, quam nulla accumsan sem, sed ullamcorper elit sapien a augue. Proin egestas placerat auctor. Aliquam erat volutpat.

Cras arcu justo, pulvinar ac tortor ac, posuere condimentum augue. Mauris hendrerit euismod sapien, vitae luctus nisl. Suspendisse erat augue, auctor sit amet scelerisque non, bibendum nec magna. Quisque id mollis lorem. Cras a lectus odio. Mauris lacinia tortor suscipit dapibus pharetra. Integer vel augue faucibus, efficitur nunc molestie, facilisis tortor. Donec at erat eu mauris euismod convallis. Mauris ullamcorper ipsum in urna varius, id mattis tellus luctus. Vivamus facilisis quam eu condimentum bibendum. Sed sit amet felis vitae est ultricies tincidunt. Fusce in sollicitudin purus. In rhoncus justo et aliquam dapibus. Aenean cursus mi ut orci porttitor, sed ornare elit pellentesque. Mauris pulvinar diam et nunc dapibus convallis."

[node name="controls" type="Node" parent="gameHolder"]

[node name="1" type="Button" parent="gameHolder/controls"]
custom_minimum_size = Vector2(152, 31)
offset_left = 222.0
offset_top = 544.0
offset_right = 374.0
offset_bottom = 575.0
theme_override_font_sizes/font_size = 15
disabled = true
text = "1"
text_overrun_behavior = 3
clip_text = true

[node name="2" type="Button" parent="gameHolder/controls"]
custom_minimum_size = Vector2(152, 31)
offset_left = 378.0
offset_top = 544.0
offset_right = 530.0
offset_bottom = 575.0
theme_override_font_sizes/font_size = 15
disabled = true
text = "1"

[node name="3" type="Button" parent="gameHolder/controls"]
custom_minimum_size = Vector2(152, 31)
offset_left = 534.0
offset_top = 544.0
offset_right = 686.0
offset_bottom = 575.0
theme_override_font_sizes/font_size = 15
disabled = true
text = "1"

[node name="4" type="Button" parent="gameHolder/controls"]
custom_minimum_size = Vector2(152, 31)
offset_left = 690.0
offset_top = 544.0
offset_right = 842.0
offset_bottom = 575.0
theme_override_font_sizes/font_size = 15
disabled = true
text = "1"

[node name="5" type="Button" parent="gameHolder/controls"]
custom_minimum_size = Vector2(152, 31)
offset_left = 222.0
offset_top = 579.0
offset_right = 374.0
offset_bottom = 610.0
theme_override_font_sizes/font_size = 15
disabled = true
text = "1"

[node name="6" type="Button" parent="gameHolder/controls"]
custom_minimum_size = Vector2(152, 31)
offset_left = 378.0
offset_top = 579.0
offset_right = 530.0
offset_bottom = 610.0
theme_override_font_sizes/font_size = 15
disabled = true
text = "1"

[node name="7" type="Button" parent="gameHolder/controls"]
custom_minimum_size = Vector2(152, 31)
offset_left = 534.0
offset_top = 579.0
offset_right = 686.0
offset_bottom = 610.0
theme_override_font_sizes/font_size = 15
disabled = true
text = "1"

[node name="8" type="Button" parent="gameHolder/controls"]
custom_minimum_size = Vector2(152, 31)
offset_left = 690.0
offset_top = 579.0
offset_right = 842.0
offset_bottom = 610.0
theme_override_font_sizes/font_size = 15
disabled = true
text = "1"

[node name="9" type="Button" parent="gameHolder/controls"]
custom_minimum_size = Vector2(152, 31)
offset_left = 222.0
offset_top = 614.0
offset_right = 374.0
offset_bottom = 645.0
theme_override_font_sizes/font_size = 15
disabled = true
text = "1"

[node name="10" type="Button" parent="gameHolder/controls"]
custom_minimum_size = Vector2(152, 31)
offset_left = 378.0
offset_top = 614.0
offset_right = 530.0
offset_bottom = 645.0
theme_override_font_sizes/font_size = 15
disabled = true
text = "1"

[node name="11" type="Button" parent="gameHolder/controls"]
custom_minimum_size = Vector2(152, 31)
offset_left = 534.0
offset_top = 614.0
offset_right = 686.0
offset_bottom = 645.0
theme_override_font_sizes/font_size = 15
disabled = true
text = "1"

[node name="12" type="Button" parent="gameHolder/controls"]
custom_minimum_size = Vector2(152, 31)
offset_left = 690.0
offset_top = 614.0
offset_right = 842.0
offset_bottom = 645.0
theme_override_font_sizes/font_size = 15
disabled = true
text = "1"

[node name="targetStatusBar2" type="Sprite2D" parent="."]
position = Vector2(573, 319)
scale = Vector2(1, 1.02932)
texture = ExtResource("2_dvin5")
flip_h = true

[node name="topTitleBarAsICantBeBotheredToModifyThePNG" type="Sprite2D" parent="targetStatusBar2"]
position = Vector2(-465.25, -300.313)
scale = Vector2(21.65, 2.4)
texture = ExtResource("4_ssifm")

[node name="targetName" type="RichTextLabel" parent="targetStatusBar2"]
offset_left = -574.0
offset_top = -314.171
offset_right = -358.0
offset_bottom = -274.171
theme_override_font_sizes/normal_font_size = 15
bbcode_enabled = true
text = "coolUsername - ???"

[node name="targetSprite" type="Sprite2D" parent="targetStatusBar2"]
position = Vector2(-471, -193.817)
scale = Vector2(0.228336, 0.22021)

[node name="tooltipBox" type="Node" parent="targetStatusBar2"]

[node name="tooltipDescription" type="RichTextLabel" parent="targetStatusBar2/tooltipBox"]
custom_minimum_size = Vector2(199, 16)
offset_left = 10.0
offset_top = 262.0
offset_right = 209.0
offset_bottom = 278.0
theme_override_font_sizes/normal_font_size = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_hra5d")
text = "peenis"
fit_content = true
scroll_active = false

[node name="tooltipTitle" type="RichTextLabel" parent="targetStatusBar2/tooltipBox"]
offset_left = 9.5
offset_top = 240.0
offset_right = 208.5
offset_bottom = 263.0
theme_override_font_sizes/normal_font_size = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_wcwqj")
bbcode_enabled = true
text = "tooltip title"
